more fixes to css on mobile

--- a/public/assets/css/dashboard/dashboard.scss
+++ b/public/assets/css/dashboard/dashboard.scss
@@ -6,6 +6,22 @@
     .card {
         min-height: 10rem;
         // height: 220px;
+
+        &#reviews .carousel .review-slide
+        {
+            p:last-of-type {
+                overflow: hidden;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 3;
+                white-space: pre-wrap;
+            }
+
+            h2 {
+                text-align: left;
+                font-size: 1rem;
+            }
+        }
     }
     
     .carousel {
