--- a/public/assets/css/guest/guest.scss
+++ b/public/assets/css/guest/guest.scss
@@ -3,7 +3,7 @@
     background-image: url('/assets/images/background.png');
     background-size: cover;
     background-position: center;
-    height: 280px;
+    height: 250px;
 
     h1 {
         color: var(--color-title);
@@ -17,8 +17,8 @@
 
     .your-digital-book {
         position: absolute;
-        bottom: 3rem;
-        left: 3rem;
+        bottom: 1.5rem;
+        left: 2rem;
         color: var(--color-title);
         font-size: 1.2rem;
     }
@@ -172,7 +172,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 10rem;
+        height: 9rem;
         padding: 0 1rem;
 
         &#middle {
