--- a/public/assets/css/searchbar/searchbar.scss
+++ b/public/assets/css/searchbar/searchbar.scss
@@ -76,11 +76,12 @@ form#search {
 }
 
 #search-box {
+    font-size: 1rem;
     display: none;
     position: absolute;
     left: 0;
     right: 0;
-    justify-content: space-around;
+    justify-content: space-between;
 
     margin: 0 auto;
     padding: 1rem 1rem;
@@ -126,7 +127,7 @@ form#search {
 
         .btn.sort {
             height: 1.2rem;
-            margin: 0 .5rem;
+            margin: 0 .4rem 0 .2rem;
         }
     }
 }
