--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -184,9 +184,7 @@ body {
 
   gap: 0px;
 
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-  margin-left: 0.5rem;
+  margin: .5rem 0.5rem;
   width: 23.25rem;
   height: 9.5rem;
 
